labs/lab-02-routes-and-ingress/manifests/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-v1
  namespace: lab-02
  labels:
    app: my-app-v1
spec:
  selector:
    app: my-app-v1
  ports:
    - name: http
      port: 80
      targetPort: 8080
